[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.14"
color-eyre = "0.5.8"
petgraph = "0.5.1"
structopt = "0.3.21"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false
