[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.14"
color-eyre = "0.5.8"
itertools = "0.9.0"
nalgebra = { version = "0.23.1", optional = true }
lalrpop-util = {version = "0.19.0", optional = true }
regex = { version = "1", optional = true}
petgraph = { version = "0.5.1", optional = true }
structopt = "0.3.21"
tinyvec = "1.1.0"

[features]

day1  = []
day2  = []
day3  = []
day4  = []
day5  = []
day6  = []
day7  = ["petgraph"]
day8  = []
day9  = []
day10 = ["nalgebra"]
day11 = []
day12 = []
day13 = []
day14 = []
day15 = []
day16 = []
day17 = []
day18 = ["regex", "lalrpop-util", "lalrpop"]
day19 = []
day20 = []
day21 = []
day22 = []
day23 = []
day24 = []

[dev-dependencies]
criterion = "0.3.3"

[build-dependencies]
lalrpop = { version = "0.19.0", optional = true, features = ["lexer"] }

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false
